// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns state and setter from brixContext 1`] = `
Array [
  "My Name",
  [Function],
]
`;

exports[`set updates brix state with function 1`] = `
Array [
  [Function],
]
`;

exports[`set updates brix state with function 2`] = `
Object {
  "isThrow": false,
  "value": Immutable.Map {
    "user": Immutable.Map {
      "name": "updated-My Name",
    },
  },
}
`;

exports[`set updates brix state with value 1`] = `
Array [
  [Function],
]
`;

exports[`set updates brix state with value 2`] = `
Object {
  "isThrow": false,
  "value": Immutable.Map {
    "user": Immutable.Map {
      "name": "New Name",
    },
  },
}
`;
